--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "rasta-protocol"]
-	path = rasta-protocol
-	url = https://github.com/eulynx-live/rasta-protocol
+[submodule "librasta"]
+	path = librasta
+	url = https://github.com/eulynx-live/librasta
